# Nicro

./: .gitignore  Cargo.toml  README.md
src/: main.rs  messages.rs  sound_board.rs  sources.rs
